# Ui_donation_robot_2019Crashlab

./: CMakeLists.txt  README.md  ReadMe.md  package.xml  ui_merry_bot.h  ui_show_bank.h
admin_ui/: CMakeLists.txt  package.xml
admin_ui/include/admin_ui/: admin_ui.h  ros_task.h  ui_admin_ui.h
admin_ui/src/: admin_ui.cpp  main.cpp  ros_task.cpp
admin_ui/ui/: admin_ui.ui
include/merry_b/: merry_bot.h  ros_task.h  ui_merry_bot.h  ui_show_bank.h
include/merry_bot/: merry_bot.h  ros_task.h
merry_b/: CMakeLists.txt  ReadMe.md  package.xml
merry_b/include/merry_b/: merry_bot.h  ros_task.h  show_bank.h  ui_show_bank.h
merry_b/include/merry_bot/: show_bank.h
merry_b/src/: main.cpp  merry_bot.cpp  ros_task.cpp  show_bank.cpp
merry_sound/: CMakeLists.txt  package.xml
merry_sound/msg/: TaskCommand.msg
merry_sound/scripts/: m_sound.py  m_talker.py  music_list.yaml  test.py
merry_win/: CMakeLists.txt  package.xml
merry_win/include/merry_win/: merry_win.h  ros_task.h  ui_merry_win.h
merry_win/launch/: merry_ui.launch
merry_win/resource/: bears.qrc
merry_win/src/: main.cpp  merry_win.cpp  ros_task.cpp
merry_win/ui/: merry_win.ui
merry_wtwo/: CMakeLists.txt  package.xml
merry_wtwo/include/merry_wtwo/: merry_wtwo.h  ros_task.h  ui_merry_wtwo.h
merry_wtwo/src/: main.cpp  merry_wtwo.cpp  ros_task.cpp
merry_wtwo/ui/: merry_wtwo.ui
src/: main.cpp  merry_bot.cpp  ros_task.cpp  show_bank.cpp
ui/: merry_bot.ui  show_bank.ui
