<?xml version="1.0"?>
<package format="2">
  <name>merry_sound</name>
  <version>0.0.1</version>
  <description>The merry_sound package</description>
  <maintainer email="hglee93@gmail.com">benlee</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
